app/deployment/k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace # TODO: Use your own namespace
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: calculator
  namespace: my-namespace # TODO: Use your own namespace
  labels:
    service: calculator
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    service: calculator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  namespace: my-namespace # TODO: Use your own namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      service: calculator
  template:
    metadata:
      labels:
        service: calculator
    spec:
      containers:
        - name: calculator
          image: # TODO: Use your own image
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          # TODO: Add health checks
          # TODO: Add security context
