app/deployment/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: calculator
  namespace: my-namespace # TODO: Use your own namespace
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: calculator-port
        protocol: HTTP
      hosts:
        - sample.com # TODO: Use your own host
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calculator
  namespace: my-namespace # TODO: Use your own namespace
spec:
  gateways:
    - calculator
  hosts:
    - sample.com # TODO: Use your own host
  http:
    - match:
        - uri:
            prefix: "/my-namespace/" # TODO: Use your own namespace for the prefix
      rewrite:
        uri: "/"
      route:
        - destination:
            host: calculator
            port:
              number: 80
